# cubrid-dev2-pr

./: .gitignore  PLAN.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
docs/: INSTALL.md  RELEASE-NOTES-0.1.0.md  USAGE.ko.md
scripts/: screenshot.py
src/cubrid_dev2_pr/: __init__.py  __main__.py  cli.py  config.py  gh.py  models.py  render.py  review.py
src/cubrid_dev2_pr/tui/: __init__.py  app.py  detail.py
tests/: test_cli.py  test_config.py  test_gh.py  test_render.py  test_review.py  test_smoke.py  test_tui.py
tests/fixtures/: pr_list_sample.json
